provarAnt/00D1b0000000d5bEAA/objects/FulfillmentSnapshotSummary__c.object
<CustomObject>
    <description>Note: In software, the Project object is named SFDC_520_Quote.  This object will be a Detail to Opportunity in a Master-Detail relationship.</description>
    <fields>
        <fullName>Account_Manager_Email__c</fullName>
        <label>Account Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Phone__c</fullName>
        <label>Account Manager Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <label>Account Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager_s_Supervisor_Email__c</fullName>
        <label>Account Manager&apos;s Supervisor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Manager_s_Supervisor_Phone__c</fullName>
        <label>Account Manager&apos;s Supervisor Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Manager_s_Supervisor__c</fullName>
        <label>Account Manager&apos;s Supervisor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Haystak QuickView</relationshipLabel>
        <relationshipName>Haystak_QuickView</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractSignedDate__c</fullName>
        <label>Contract Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <label>Deal Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImplementationContact__c</fullName>
        <label>Implementation Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Fulfillment_Snapshot_Summaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Parent_Opportunity_Id__c</fullName>
        <externalId>true</externalId>
        <label>Parent Opportunity Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Haystak QuickView</label>
    <nameField>
        <label>Haystak QuickView</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Haystak QuickView</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>